Updated link to newer version of Cloud Page Apps webinar recording

--- a/docs/sfmc-webinars.mdx
+++ b/docs/sfmc-webinars.mdx
@@ -56,13 +56,13 @@ Learn how and when to create a custom application for your SFMC users using Clou
 
 ### Video
 
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/szVqTdn6ITY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen;" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3ngC9OLKaEI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen;" allowfullscreen></iframe>
 
 ### Materials
 
 19 October 2022 | When AppExchange is right and what to do when it's wrong
 - | -
-Recording | [YouTube](https://www.youtube.com/watch?v=szVqTdn6ITY&list=PL_o00w2Z5LYF91zZDfjY03RWg2P-wdZr9)
+Recording | [YouTube](https://www.youtube.com/watch?v=3ngC9OLKaEI&list=PL_o00w2Z5LYF91zZDfjY03RWg2P-wdZr9)
 Slides | [PDF](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/blob/master/static/pdf/%5B2022-05%5D%20Architecting%20Web%20Solutions%20in%20SFMC.pdf)
 Snippets | [GitHub](https://github.com/MateuszDabrowski/sfmc-cloud-page-app-template)
 Articles | [Solve with Cloud Page Apps](../usecase/sfmc-cloud-page-apps/) & [Power of Code Resources](../usecase/power-of-code-resources/)
