Metadata fix for SFMC Webinars

--- a/docs/sfmc-webinars.mdx
+++ b/docs/sfmc-webinars.mdx
@@ -1,8 +1,7 @@
 ---
 id: sfmc-webinars
-title: Marketing Cloud Webinars
-sidebar_label: SFMC Webinars
-description: WIP
+title: SFMC Webinars
+description: My SFMC Webinars with key points, recordings, slides, snippets and articles. All-in-one, all for free.
 image: img/og/og-image-zen-of-sfmc.png
 tags: [Marketing Cloud, Best Practice, SSJS, Cloud Page, App, Snippet]
 toc_max_heading_level: 2
