Added VideoEmbed responsive compontent

--- a/docs/sfmc-webinars.mdx
+++ b/docs/sfmc-webinars.mdx
@@ -8,6 +8,7 @@ toc_max_heading_level: 2
 ---
 
 import { LeadText } from '../src/components/LeadText.js';
+import { YouTube } from '../src/components/VideoEmbed.js';
 
 <LeadText content="My SFMC Webinars with key points, recordings, slides, snippets and articles. All-in-one, all for free." />
 
@@ -28,7 +29,7 @@ Learn how to make the most out of Web Studio using best practices and tested arc
 
 ### Video
 
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/a8RPRvVOXak" title="Architecting Web Solutions in SFMC Webinar" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen;" allowfullscreen></iframe>
+<YouTube videoId="a8RPRvVOXak" title="Architecting Web Solutions in SFMC Webinar Recording" />
 
 ### Materials
 
@@ -36,7 +37,7 @@ Learn how to make the most out of Web Studio using best practices and tested arc
 - | -
 Recording | [YouTube](https://www.youtube.com/watch?v=a8RPRvVOXak&list=PLntZFZH56rSeuaF2vRaDPBIL6rH_vgLD3)
 Slides | [PDF](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/blob/master/static/pdf/%5B2022-05%5D%20Architecting%20Web%20Solutions%20in%20SFMC.pdf)
-Articles | [Solve with Cloud Page Apps](../usecase/sfmc-cloud-page-apps/) & [Power of Code Resources](../usecase/power-of-code-resources/)
+Articles | [Solve with Cloud Page Apps](../usecase/sfmc-cloud-page-apps/) & [Power of Code Resources](../usecase/sfmc-code-resource/)
 
 ---
 
@@ -55,7 +56,7 @@ Learn how and when to create a custom application for your SFMC users using Clou
 
 ### Video
 
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3ngC9OLKaEI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen;" allowfullscreen></iframe>
+<YouTube videoId="3ngC9OLKaEI" title="When AppExchange is right and what to do when it's wrong Webinar Recording" />
 
 ### Materials
 
@@ -64,4 +65,4 @@ Learn how and when to create a custom application for your SFMC users using Clou
 Recording | [YouTube](https://www.youtube.com/watch?v=3ngC9OLKaEI&list=PL_o00w2Z5LYF91zZDfjY03RWg2P-wdZr9)
 Slides | [PDF](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/blob/master/static/pdf/%5B2022-05%5D%20Architecting%20Web%20Solutions%20in%20SFMC.pdf)
 Snippets | [GitHub](https://github.com/MateuszDabrowski/sfmc-cloud-page-app-template)
-Articles | [Solve with Cloud Page Apps](../usecase/sfmc-cloud-page-apps/) & [Power of Code Resources](../usecase/power-of-code-resources/)
+Articles | [Solve with Cloud Page Apps](../usecase/sfmc-cloud-page-apps/) & [Power of Code Resources](../usecase/sfmc-code-resource/)
