Fixed link in Contact Deletion article

--- a/docs/usecase/sfmc-contact-deletion.mdx
+++ b/docs/usecase/sfmc-contact-deletion.mdx
@@ -127,7 +127,7 @@ This method will be better if you want to remove a significant number of contact
 
 :::note You Should Know
 
-This method allows you to delete up to one million contacts per operation. If you want to remove more than that, you will have to run the above steps multiple times or leverage [contact deletion automation](#contact-deletion-with-automation Studio).
+This method allows you to delete up to one million contacts per operation. If you want to remove more than that, you will have to run the above steps multiple times or leverage [contact deletion automation](#contact-deletion-with-automation-studio).
 
 :::
 
