Updated Data Views diagram link to newer version by Zuzanna Jarczyńska

--- a/docs/sfmc-webinars.mdx
+++ b/docs/sfmc-webinars.mdx
@@ -50,7 +50,7 @@ Learn how and when to create a custom application for your SFMC users using Clou
 1. SFMC Solutioning 101
 2. Cloud Page App 101
 3. AppExchange Menu Magic
-4. Cloud page App SSO
+4. Cloud Page App SSO
 5. Simple Cloud Page App
 6. Complex Cloud Page App
 
