Additional Features on Demand related to email links

--- a/docs/config/sfmc-config-features-on-demand.mdx
+++ b/docs/config/sfmc-config-features-on-demand.mdx
@@ -80,6 +80,8 @@ Email Send Throttle | Allows you to control both the maximum amount of messages 
 CC and BCC for Email | Allows you to use CC and BCC in your Emails. You can even use personalisation strings for it (f.e. `%%AccountOwnerEmail%%`). Watch out for unsubscription rules! | [Select Audience](https://help.salesforce.com/articleView?id=sf.mc_es_select_audience.htm&type=5) | Free
 Additional Email Attributes | Allows you to use custom email attributes to use for personalisation. Perfect for tracking links. You can ask Support to enable more than default 5. | [Additional Email Attributes](https://help.salesforce.com/articleView?id=000353527&language=en_US&mode=1&type=1) | Free
 Microsites | Allows you to access a Classic view from the Email Studio - Content and create Microsites. As it is a legacy feature that is being sunset, you will need a strong business use case to get it. | N/A | Free
+Custom Preference Center Links | SFMC has a set of personalisation strings for preference management: `%%subscription_center_url%%`, `%%profile_center_url%%`, `%%unsub_center_url%%`. By default they link to the respective out-of-the-box pages, but support can redirect them to any other URL on request | N/A | Free
+Custom List-Unsubscribe Header Link | SFMC automatically unsubscribes your contacts from the list assigned to the email when List Unsubscribe is triggered. Support can redirect it to any other URL (like Preference Center or custom Cloud Page handler). | N/A | Free
 
 ## Mobile Studio Features
 
