Restructuring Ideas section for better UX

--- a/docs/config/sfmc-config-behavioral-triggers.mdx
+++ b/docs/config/sfmc-config-behavioral-triggers.mdx
@@ -4,7 +4,7 @@ title: SFMC Behavioral Triggers
 sidebar_label: Behavioral Triggers
 description: Win-back your e-commerce customers with SFMC Behavioral Triggers.
 image: img/og/og-image-sfmc-behavioral-triggers.png
-tags: [Marketing Cloud, Configuration, Email, Journey, Personalisation]
+tags: [Marketing Cloud, Configuration, Email, Journey, Personalisation, Behavioral Triggers, Einstein]
 ---
 
 import Tabs from '@theme/Tabs';
@@ -844,7 +844,7 @@ Remember, however, that the Behavioral Trigger Content Block use classes visible
 
 :::note You Should Know
 
-The current version of Behavioral Trigger Content Block is not rendering correctly on Yahoo, AOL and Windows Outlook. Learn more [here](../../../sites/ideas#behavioral-trigger-content-block-rendering-on-yahoo-aol-windows-outlook).
+The current version of Behavioral Trigger Content Block is not rendering correctly on Yahoo, AOL and Windows Outlook. Learn more [here](../../../sites/ideas/sfmc-ideas#behavioral-trigger-content-block-rendering-on-yahoo-aol-windows-outlook).
 
 Fix it by changing `rem` units in `markupFragments` to `px` ones.
 
