Updated naming convention for new Ideas structure

--- a/docs/js/js-snippet-export-import-document-sfmc-roles.mdx
+++ b/docs/js/js-snippet-export-import-document-sfmc-roles.mdx
@@ -158,7 +158,7 @@ Add the Name of the Role and its purpose stored in the Description field, and th
 
 ## Backup of Standard Roles
 
-As the [default System Roles permissions](https://mateuszdabrowski.pl/docs/config/sfmc-config-permissions/) in Salesforce Marketing Cloud can be edited freely and [currently there is no easy way to revert those changes](https://mateuszdabrowski.pl/sites/ideas/#restore-default-permissions-for-sfmc-standard-system-roles), I created a backup repository for you with all out-of-the-box configurations.
+As the [default System Roles permissions](https://mateuszdabrowski.pl/docs/config/sfmc-config-permissions/) in Salesforce Marketing Cloud can be edited freely and [currently there is no easy way to revert those changes](https://mateuszdabrowski.pl/sites/ideas/marketing-cloud-ideas#restore-default-permissions-for-sfmc-standard-system-roles), I created a backup repository for you with all out-of-the-box configurations.
 
 <Button
  link='https://github.com/MateuszDabrowski/sfmc-roles-backup'
