--- a/sites/ideas/interaction-studio-ideas.mdx
+++ b/sites/ideas/interaction-studio-ideas.mdx
@@ -1,16 +1,15 @@
 ---
-id: sfmc-personalisation-ideas
-title: Ideas for SFMC Personalisation
-sidebar_label: SFMC Personalisation
-description: Here you can find all my SFMC Personalisation (Interaction Studio) IdeaExchange contributions. Let's make the change!
-image: img/og/og-image-sfmc-personalisation-ideas.png
-tags: [Marketing Cloud Personalisation, Ideas, Einstein]
+id: interaction-studio-ideas
+title: Interaction Studio Ideas
+sidebar_label: Interaction Studio
+description: Here you can find all my Interaction Studio (SFMC Personalisation) IdeaExchange contributions. Let's make the change!
+image: img/og/og-image-interaction-studio-ideas.png
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 import { Button } from '../../src/components/Buttons.js';
 
-<LeadText content="Here you can find all my SFMC Personalisation (Interaction Studio) IdeaExchange contributions. Let's make the change!" />
+<LeadText content="Here you can find all my Interaction Studio (SFMC Personalisation) IdeaExchange contributions. Let's make the change!" />
 
 
 ## Einstein Recipes
