--- a/sites/ideas/marketing-cloud-ideas.mdx
+++ b/sites/ideas/marketing-cloud-ideas.mdx
@@ -1,10 +1,9 @@
 ---
-id: sfmc-ideas
-title: Ideas for SFMC
+id: marketing-cloud-ideas
+title: Marketing Cloud Ideas
 sidebar_label: Marketing Cloud
 description: Here you can find all my Salesforce Marketing Cloud IdeaExchange contributions. Let's make the change!
 image: img/og/og-image-sfmc-ideas.png
-tags: [Marketing Cloud, Ideas, Journey, Behavioral Triggers, Einstein, Data Management, Setup, SMS, Cloud Page]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
