Further site struture update

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -55,6 +55,8 @@ In this part, I am gathering selected elements of modern vanilla JavaScript that
 
 ### JS Snippets
 
+- [Tailor with Data](./js/js-snippet-tailor-with-data.mdx)
+- [Engage with Countdown](./js/js-snippet-engage-with-countdown.mdx)
 - [Export, Import & Document Roles in Salesforce Marketing Cloud](./js/js-snippet-export-import-document-sfmc-roles.mdx)
 
 <Button
@@ -118,7 +120,6 @@ Many things in Salesforce Marketing Cloud aren't coding but have a massive impac
 - [Permissions](./config/sfmc-config-permissions.mdx)
 - [System Data Views](./config/sfmc-config-system-data-views.mdx)
 - [Features On Demand](./config/sfmc-config-features-on-demand.mdx)
-- [Behavioral Triggers](./config/sfmc-config-behavioral-triggers.mdx)
 - [AppExchange Solutions](./config/sfmc-config-appexchange-solutions.mdx)
 
 <Button
@@ -130,16 +131,26 @@ Many things in Salesforce Marketing Cloud aren't coding but have a massive impac
 
 Knowing how to code is one thing. Knowing what to code is another. In Use Cases, I focus not on specific features of the Marketing Cloud configuration or its programming languages but rather on using them to drive business value. Take a look and pick what you need.
 
-- [Tailor with Data](./usecase/tailor-with-data.mdx)
-- [Engage with Countdown](./usecase/engage-with-countdown.mdx)
-- [Power of Code Resources](./usecase/sfmc-code-resource.mdx)
 - [Solve with Cloud Page Apps](./usecase/sfmc-cloud-page-apps.mdx)
-- [Enhanced Send Log](./usecase/sfmc-enhanced-send-log.mdx)
+- [Power of Code Resources](./usecase/sfmc-code-resource.mdx)
 - [Contact Deletion Process](./usecase/sfmc-contact-deletion.mdx)
+- [Enhanced Send Log](./usecase/sfmc-enhanced-send-log.mdx)
+- [Behavioral Triggers](./usecase/sfmc-behavioral-triggers.mdx)
 
 <Button
     link='./category/sfmc-use-cases/'
     text='Read about SFMC Use Cases'
+/>
+
+## Interaction Studio
+
+Interaction Studio is a cross-channel real-time hyper-personalisation engine in Salesforce Marketing Cloud. Behind that cool-looking description is a powerful tool that lets your company adapt every point of contact to each person. Neat!
+
+- [Open Time Email Template](./interaction-studio/is-open-time-email.mdx)
+
+<Button
+    link='./category/interaction-studio/'
+    text='Read about Interaction Studio'
 />
 
 ## Changes
