--- a/docs/js/js-snippet-export-import-document-sfmc-roles.mdx
+++ b/docs/js/js-snippet-export-import-document-sfmc-roles.mdx
@@ -14,7 +14,7 @@ import { Button } from '../../src/components/Buttons.js';
 
 While you get a set of standard user Roles in Salesforce Marketing Cloud, those are rarely enough. Instead, they are the base on which you can create custom-tailored solutions that align with your business architecture.
 
-On top of that, standard Roles are silently changing from release to release as permissions come and go, so keeping track of them is crucial to have a clear picture of what your users can do.
+On top of that, standard Roles are silently changing from release to release as [permissions](../config/sfmc-config-permissions.mdx) come and go, so keeping track of them is crucial to have a clear picture of what your users can do.
 
 Marketing Cloud doesn't make it easy. There is no option to clone existing Roles to serve as a starting point for a new custom one. There is no option to export and import them between SFMC accounts. There is no option to create good documentation on them (unless you have a kink for super long print screens).
 
