--- a/docs/js/js-snippet-tailor-with-data.mdx
+++ b/docs/js/js-snippet-tailor-with-data.mdx
@@ -1,5 +1,5 @@
 ---
-id: tailor-with-data
+id: js-snippet-tailor-with-data
 title: Tailor the experience with data logic
 sidebar_label: Tailor with Data
 description: Everyone and his boss are talking about personalisation. Most stop at tailoring the content. Don't be that person. Utilise the power of simple data logic and control the user flows.
