--- a/docs/config/sfmc-config-permissions.mdx
+++ b/docs/config/sfmc-config-permissions.mdx
@@ -347,7 +347,7 @@ __Legacy__ permissions.
 
 ## Backup of Standard Roles
 
-As the [default System Roles permission sets](https://mateuszdabrowski.pl/docs/config/sfmc-config-permissions/) in Salesforce Marketing Cloud can be edited freely and [currently there is no easy way to revert those changes](https://mateuszdabrowski.pl/sites/ideas/marketing-cloud-ideas/#restore-default-permissions-for-sfmc-standard-system-roles), I created a backup repository for you with all out-of-the-box configurations.
+As the default System Roles permission sets in Salesforce Marketing Cloud can be edited freely and [currently there is no easy way to revert those changes](../../../sites/ideas/marketing-cloud-ideas/#restore-default-permissions-for-sfmc-standard-system-roles), I created a backup repository for you with all out-of-the-box configurations. Perfect for use with the [permission import soluton](../../js/js-snippet-export-import-document-sfmc-roles/).
 
 <Button
  link='https://github.com/MateuszDabrowski/sfmc-roles-backup'
